<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">Benefits</string>

    <!--Success Dialog-->

    <!--Error Dialog-->
    <string name="error_message">Something went terribly wrong\n(probably my fault)</string>

    <!-- Internet Connection Error Dialog -->
    <string name="error_internet_title">Oh snap :/</string>
    <string name="error_internet_message">Internet is disconnected.</string>
    <string name="error_internet_button_text">I\'ll be right back!</string>

    <!-- Login View-->
    <string name="login_layout_hint_email">email</string>
    <string name="login_layout_hint_password">password</string>
    <string name="login_auto">Sign In\nautomatically</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_find_password">I Forgot Password</string>

    <!-- Login Error -->
    <string name="login_error_network_failed">Please be sure that internet is connected\nand try it later.</string>
    <string name="login_error_on_process">An error occurred during on process.</string>
    <string name="login_error_wrong_password">Got wrong password. Please check again.</string>
    <string name="login_error_session_closed">The session is closed. Please login again.</string>

    <!-- Auto Login Error -->
    <string name="auto_login_error_title">Auto Sign In Failed :/</string>
    <string name="auto_login_error_auth_expired">Your previous authentication has been expired.\nPlease sign in again.</string>
    <string name="auto_login_error_button_text">Go to Sign In</string>

    <!-- Main -->
    <string name="main_logout_button_text">Log Out</string>
    <string name="main_logout_success_title">Success :=)</string>
    <string name="main_logout_success_message">Logged out successfully!</string>
    <string name="main_logout_success_button_text">Okay!</string>

    <!-- Sign Up -->
    <string name="signup_email_hint">Email</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_password2_hint">Password again.</string>
    <string name="signup_commit_button_text">Sign Up</string>
    <string name="signup_helper_text_email_required">Put your valid email address.</string>
    <string name="signup_helper_text_password_required">8 to 20 letters.</string>
    <string name="signup_helper_text_password2_required">Not same password.</string>
    <string name="signup_error_email_required">Put your valid email address.</string>
    <string name="signup_error_password_required">8 to 20 letters.</string>
    <string name="signup_error_password2_required">Not same password.</string>
    <string name="signup_success_title">Success!</string>
    <string name="signup_success_message">Your account is now available.</string>
    <string name="signup_success_button">Go to Sign In.</string>
    <string name="signup_failed_title">Failed..</string>
    <string name="signup_failed_exist_message">Your account is already exist.</string>
    <string name="signup_failed_button">Retry.</string>

</resources>
