<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
            android:id="@+id/naver_login_button"
            style="@style/LoginButton"
            android:layout_width="145dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/login_bt"
            app:layout_constraintTop_toBottomOf="@+id/login_bt"
            app:layout_constraintVertical_bias="0.054" />

        <com.kakao.usermgmt.LoginButton
            android:id="@+id/kakao_login_button"
            style="@style/LoginButton"
            android:layout_width="150dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/naver_login_button"
            app:layout_constraintEnd_toEndOf="@+id/login_bt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/naver_login_button"
            app:layout_constraintTop_toTopOf="@+id/naver_login_button"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rotate_progress" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="8dp"
            android:shadowColor="#EE313031"
            android:shadowDx="16"
            android:shadowDy="16"
            android:shadowRadius="50"
            android:text="@string/app_name"
            android:textColor="@color/milkyWhite"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_l"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_layout_hint_email"
            android:theme="@style/LoginLayout"
            app:layout_constraintBottom_toTopOf="@+id/naver_login_button"
            app:layout_constraintEnd_toEndOf="@+id/password_l"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password_l"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.283">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_et"
                style="@style/LoginEditText"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_l"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_layout_hint_password"

            android:theme="@style/LoginLayout"
            app:layout_constraintEnd_toEndOf="@+id/login_bt"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/login_bt"
            app:layout_constraintTop_toBottomOf="@+id/email_l">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                style="@style/LoginEditText"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/remember_sw"
            style="@style/Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_auto"
            app:layout_constraintBottom_toTopOf="@+id/naver_login_button"
            app:layout_constraintStart_toStartOf="@+id/email_l"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.134"/>

        <Button
            android:id="@+id/login_bt"
            style="com.google.android.material.button.MaterialButton"
            android:layout_width="291dp"
            android:layout_height="64dp"
            android:background="@drawable/outline_rounded2"
            android:padding="4dp"
            android:text="@string/login_sign_in"
            android:textColor="@color/milkyWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.58" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView3"
            style="@style/LoginSmallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_up"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="@+id/remember_sw"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/remember_sw" />

        <TextView
            android:id="@+id/textView4"
            style="@style/LoginSmallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            style="@style/LoginSmallTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_find_password"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/password_l"
            app:layout_constraintTop_toTopOf="@+id/textView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>